[package]
name = "fondoeh"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["rt", "macros", "rt-multi-thread"] }
